06 August 2007

* TDB is now a mandatory dependency.

03 August 2007

* Fetching from mboxes.

02 August 2007

* Handle IMAP mails properly if they have no trailing newline.
* Use APOP for POP3 or CRAM-MD5 for IMAP if offered by server. Note that fdm
  currently does NOT fall back to plaintext auth if the server offers APOP
  or CRAM-MD5 but it doesn't work.

01 August 2007

* fdm 1.3c released.
* Wrong size for match buffer in pcre.c. SF.net bug 1765524.
* Try to buffer as much as possible when reading, this prevents problems since
  SSL_read seems to buffer data itself which poll can't know about.
* Fix a bug with SSL where a "don't stop" error (want read/want write) would
  make fdm think there was data received when there wasn't, resulting in
  spurious new lines and fetching being aborted. This somehow failed to show
  up in the two months since 1.1 was released. Reported by Steven Mestdagh.

31 July 2007

* Accept only ".\r\n" as terminator for POP3 and NNTP, not a '.' followed by
  anything except '.'.
* Don't include a leading space in the POP3 UID.

30 July 2007

* fdm 1.3a and 1.3b released.
* Change to using setitimer for SSL_connect timeout. OpenBSD, and possibly
  others, limit SO_RCVTIMEO to 327 seconds. Also try smaller timeouts if setting
  the first one fails, to a minimum of 30 seconds. Reported by Steven Mestdagh.
* fdm 1.3 released.

25 July 2007

* Tidied and refactored much of file.c and deliver-{mbox,maildir}.c.
* Brought back fatal and fatalx as #defines which prepend __func__ and pass
  through to log_fatal/log_fatalx.

24 July 2007

* Embedding an undefined macro in a string with ${} is no longer an error, it
  is just treated as empty. This makes ifdef/endif more useful.

17 July 2007

* Only store shared filename (NAME_MAX) in struct shm and construct path into
  temp dir on-the-fly. Saves (PATH_MAX - NAME_MAX) per struct.
* Trailing newlines are now stripped from message_id tag (as they used to