@@ -15,7 +15,6 @@
 - handle multiple header instances when looking for users (other places?)
 - fnmatch in find_header (don't forget ':') -- new: match_header
 - add some of the other non-useless stuff reformail can do, if any
-- write/append/pipe would benefit from add-from per stdout
 - deliver to IMAP folder
 - refactor & clean up privsep mail transfer code
 - is there any reason struct mail shouldn't point to a struct account?
@@ -27,3 +26,4 @@
 - weed is not doing its jobs, check domains
 - better website
 - document mbox fetch
+- extracting msg-ids (NNTP parse223, message-id) split to function
