@@ -1,3 +1,8 @@
+10 August 2007
+
+* add-from on stdout delivery is gone, an acceptable from line can be prepended
+  using rewrite.
+
 06 August 2007
 
 * TDB is now a mandatory dependency.
@@ -515,4 +520,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.136 2007-08-08 20:00:20 nicm Exp $
+$Id: CHANGES,v 1.137 2007-08-10 13:37:29 nicm Exp $
